# CPlusPlusChess

./: .gitignore  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: ccpp.yml  standalone.yml
.run/: ChessTests.run.xml
include/: Board.h  bestmove.h  board.h  chessutil.h  evaluator.h  greeter.h  minimax.h  move.h  movecache.h  options.h
source/: Board.cpp  bestmove.cpp  board.cpp  chessutil.cpp  evaluator.cpp  greeter.cpp  minimax.cpp  move.cpp  movecache.cpp  options.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: bestmove.cpp  board.cpp  cache.cpp  chess.cpp  chessutil.cpp  evaluate.cpp  move.cpp  options.cpp
